# NanTex

./: .gitignore  BUGS.html  BUGS.md  Bulk_eval.ipynb  Evaluate_final.ipynb  Hara_Feature_Extraction.ipynb  ImSeg.ipynb  LICENSE  NanTex.yml  NanTex_dev.yml  NanTex_eval.yml  README.html  README.md  TODO.md  batch_factory_sandbox.ipynb  data_loader_sandbox.ipynb  lay_images.ipynb  model_test_sandbox.ipynb  naming_convention.txt  npy_to_image.ipynb  oneiros_sandbox.ipynb  overlay_generator_sandbox.ipynb  overlay_sandbox.ipynb  pyproject.toml  quick_eval.ipynb  rhadamanthus_sandbox.ipynb  sandbox.ipynb
NanTex_backend/Util/: P_COLORS.py  Query.py  bit_generator_utils.py  file_handler_core.py  overlay_helper.py  pltStyler.py  pyDialogue.py  silencer.py  (+1 more)
configs/: BatchDataLoader_config.json  BatchDataLoader_shareloc_config.json  BatchDataLoader_wurzburg_autobatch_config.json  BatchDataLoader_wurzburg_config.json  BatchFactory_config.json
experimental/: NegativExample.ipynb  ms_ssim_loss.py
legacy/: BUGS.md  MultiplexTutorial.ipynb  PresentationImages.ipynb  Segment.ipynb  TestUnet4Layers.ipynb  batch_data_loader.py  batch_factory_sandbox.ipynb  filters.py  legacy_eval_values.txt  model_test_sandbox.ipynb
notebooks/: data_loader_sandbox.ipynb  oneiros_sandbox.ipynb  overlay_generator_sandbox.ipynb  rhadamanthus_sandbox.ipynb
related_useful_stuff/: Construct GIF panel from NanTex folders.ipynb  create_dataset_from_augment_stack.ipynb  npy_to_image.ipynb
test_debug_sandbox/: sanbox.ipynb  test_filter.ipynb
tutorials/: batch_provider.ipynb  data_preparation.ipynb  demo_data_preparation.ipynb  model_evaluation.ipynb  model_training.ipynb  nanotexture_multiplexing.ipynb
(+46 files in other folders)
