[tool.poetry]
name = "nantex"
version = "0.1.0"
description = "Nanotextural multiplexing of super-resolution microscopy data."
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "BSD-4-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
scikit-image = "^0.25.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
ray = {extras = ["default"], version = "^2.49.1"}
ezray = "^1.1.4"
pytorch-msssim = "^1.0.0"
albumentations = "^2.0.8"
tensorboard = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
